--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
-  "files": [],
+  "compilerOptions": {
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
+  },
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  "include": ["global.d.ts", "src"]
 }
